# Quantbrowse-ai

./: .env.example  .gitignore  1_MONTH_MASTER_ROADMAP.md  README.md  ShopKing v2.9 Nulled.rar  TASKS.md  agent_swarm_config.js  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
agents/: Task_Opus_Avalanche_1.md  Task_Opus_Avalanche_10.md  Task_Opus_Avalanche_100.md  Task_Opus_Avalanche_101.md  Task_Opus_Avalanche_102.md  Task_Opus_Avalanche_103.md  Task_Opus_Avalanche_104.md  Task_Opus_Avalanche_105.md  Task_Opus_Avalanche_106.md  Task_Opus_Avalanche_107.md  Task_Opus_Avalanche_108.md  Task_Opus_Avalanche_109.md  Task_Opus_Avalanche_11.md  Task_Opus_Avalanche_110.md  Task_Opus_Avalanche_111.md  Task_Opus_Avalanche_112.md  Task_Opus_Avalanche_113.md  Task_Opus_Avalanche_114.md  Task_Opus_Avalanche_115.md  Task_Opus_Avalanche_116.md  Task_Opus_Avalanche_117.md  Task_Opus_Avalanche_118.md  Task_Opus_Avalanche_119.md  Task_Opus_Avalanche_12.md  Task_Opus_Avalanche_120.md  Task_Opus_Avalanche_121.md  Task_Opus_Avalanche_122.md  Task_Opus_Avalanche_123.md  Task_Opus_Avalanche_124.md  Task_Opus_Avalanche_125.md  Task_Opus_Avalanche_126.md  Task_Opus_Avalanche_127.md  Task_Opus_Avalanche_128.md  Task_Opus_Avalanche_129.md  Task_Opus_Avalanche_13.md  Task_Opus_Avalanche_130.md  Task_Opus_Avalanche_131.md  Task_Opus_Avalanche_132.md  Task_Opus_Avalanche_133.md  Task_Opus_Avalanche_134.md  (+124 more)
extension/: background.js  collections.css  collections.html  collections.js  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+73 files in other folders)
